--- a/GENDER/GENDER_CLF_TRAINING.ipynb
+++ b/GENDER/GENDER_CLF_TRAINING.ipynb
@@ -161,14 +161,14 @@
    "outputs": [],
    "source": [
     "print('female train')\n",
-    "images_1, names_1, labels_1                = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/FEMALE_TRAIN') \n",
+    "images_1, names_1, labels_1                = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TRAIN_1') \n",
     "print('male train')\n",
-    "images_0, names_0, labels_0                = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/MALE_TRAIN') \n",
+    "images_0, names_0, labels_0                = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TRAIN_0') \n",
     "\n",
     "print('female test')\n",
-    "images_1_test, names_1_test, labels_1_test = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/FEMALE_TEST') \n",
+    "images_1_test, names_1_test, labels_1_test = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TEST_1') \n",
     "print('male test')\n",
-    "images_0_test, names_0_test, labels_0_test  = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/MALE_TEST') \n",
+    "images_0_test, names_0_test, labels_0_test  = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TEST_0') \n",
     "\n",
     "print('Done loading images')\n",
     "###### "
@@ -505,7 +505,8 @@
     "        plot_hist(train_y, train_clf_pred)\n",
     "        plot_hist(y_test, test_clf_pred)\n",
     "    \n",
-    "    # final_model.save('/main_dir/model_name.h5, include_optimizer=True)  \n"
+    "    final_model.save(data_path + '/main_dir/model_name.h5, include_optimizer=True)  \n",
+    "                     \n"
    ]
   },
   {
