--- a/GENDER/GENDER_DISCOVER_TRAINING.ipynb
+++ b/GENDER/GENDER_DISCOVER_TRAINING.ipynb
@@ -44,6 +44,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.10\n",
+      "2.6.2\n",
+      "2.6.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from platform import python_version\n",
+    "print(python_version())\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "print(tf.version.VERSION)\n",
+    "\n",
+    "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -68,7 +93,7 @@
     "noise_var = 1\n",
     "load_model_true = 1\n",
     "do_augmentations = 0\n",
-    "\n",
+    "upload_saved_model = 0\n",
     "data_path = '/home/odedrot' # user input"
    ]
   },
@@ -142,14 +167,14 @@
     "\n",
     "################################################################################################\n",
     "# train\n",
-    "images0 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/MALE_TRAIN') \n",
-    "images1 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/FEMALE_TRAIN') \n",
+    "images0 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TRAIN_0') \n",
+    "images1 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TRAIN_1') \n",
     "X_train = np.concatenate((images0, images1))\n",
     "\n",
     "################################################################################################\n",
     "# test\n",
-    "images0 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/MALE_TEST') \n",
-    "images1 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/FEMALE_TEST') \n",
+    "images0 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TEST_0') \n",
+    "images1 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TEST_1') \n",
     "\n",
     "X_test = np.concatenate((images0, images1))\n",
     "\n",
@@ -680,9 +705,9 @@
     "    validity = model(encoded_repr)\n",
     "    return Model(encoded_repr, validity, name='discriminator')\n",
     "\n",
-    "def build_recognizer():\n",
-    "    recognizer_input = Input(shape=img_shape, name='recognizer_input') # batchx128x128x1    \n",
-    "    x = Conv2D(32, 5, strides=2, padding=\"same\", name=\"rec_conv1_preact\")(recognizer_input)\n",
+    "def build_disentangleNET():\n",
+    "    disentangleNET_input = Input(shape=img_shape, name='disentangleNET_input') # batchx128x128x1    \n",
+    "    x = Conv2D(32, 5, strides=2, padding=\"same\", name=\"rec_conv1_preact\")(disentangleNET_input)\n",
     "    x = LeakyReLU(alpha=0.2)(x)\n",
     "    x = Conv2D(64, 5, strides=2, padding=\"same\", name=\"rec_conv2_preact\")(x) \n",
     "    x = LeakyReLU(alpha=0.2)(x)\n",
@@ -694,10 +719,10 @@
     "    x = Flatten()(x)\n",
     "    x = Dense(512)(x)\n",
     "    x = LeakyReLU(alpha=0.2)(x)\n",
-    "    recognizer_output = Dense(latent_dim, activation='softmax')(x)\n",
-    "    recognizer_value = Dense(1)(x)\n",
-    "    recognizer = Model(recognizer_input, [recognizer_output], name=\"recognizer\")\n",
-    "    return recognizer"
+    "    disentangleNET_output = Dense(latent_dim, activation='softmax')(x)\n",
+    "    disentangleNET_value = Dense(1)(x)\n",
+    "    disentangleNET = Model(disentangleNET_input, [disentangleNET_output], name=\"disentangleNET\")\n",
+    "    return disentangleNET"
    ]
   },
   {
@@ -923,16 +948,17 @@
    "source": [
     "encoder = BuildEncoder()\n",
     "generator = BuildGenerator()\n",
-    "recognizer = build_recognizer()\n",
+    "disentangleNET = build_disentangleNET()\n",
     "discriminator1D = BuildDiscriminator1D()\n",
     "# discriminatorDW = BuildDiscriminatorDW()\n",
     "\n",
     "# load weights to model\n",
-    "model_path = data_path + '/DISCOVERY-master/GENDER/GENDER_DISCOVER_SAVED_MODELS/'\n",
-    "encoder.load_weights(model_path + 'encoder' + '.h5')\n",
-    "generator.load_weights(model_path + 'generator' + '.h5')\n",
-    "recognizer.load_weights(model_path + 'disentangleNET' + '.h5')\n",
-    "discriminator1D.load_weights(model_path + 'discriminator1D' + '.h5')\n",
+    "if upload_saved_model == 1:\n",
+    "    model_path = data_path + '/DISCOVERY-master/GENDER/GENDER_DISCOVER_SAVED_MODELS/'\n",
+    "    encoder.load_weights(model_path + 'encoder' + '.h5')\n",
+    "    generator.load_weights(model_path + 'generator' + '.h5')\n",
+    "    disentangleNET.load_weights(model_path + 'disentangleNET' + '.h5')\n",
+    "    discriminator1D.load_weights(model_path + 'discriminator1D' + '.h5')\n",
     "\n",
     "ae_optimizer=Adam(LEARNING_RATE, beta_1=BETA_1, beta_2=BETA_2)\n",
     "disc1D_optimizer=Adam(LEARNING_RATE/10, beta_1=BETA_1, beta_2=BETA_2)"
@@ -988,7 +1014,7 @@
     "                pert_z_vecs, GT_onehot_vecs = perturbate_embedding(z_imgs)\n",
     "                pert_imgs = generator(z_imgs + pert_z_vecs, training=True) ## only predict\n",
     "                pert_diff = tf.abs(pert_imgs - recon_imgs) ### abs or not\n",
-    "                onehot_dim_pred = recognizer(pert_diff, training=True) \n",
+    "                onehot_dim_pred = disentangleNET(pert_diff, training=True) \n",
     "                pert__pert_imgs = generator(encoder(pert_imgs, training=True)[0] - pert_z_vecs, training=True )\n",
     "                \n",
     "                ## disciriminator1D adv\n",
@@ -1022,7 +1048,7 @@
     "       \n",
     "                \n",
     "            ## ae BP (discriminator isnt trainable)\n",
-    "            trainable_variables = encoder.trainable_variables + generator.trainable_variables + recognizer.trainable_variables \n",
+    "            trainable_variables = encoder.trainable_variables + generator.trainable_variables + disentangleNET.trainable_variables \n",
     "            ae_gradients = tape.gradient(ae_loss, trainable_variables)\n",
     "            ae_optimizer.apply_gradients(zip(ae_gradients, trainable_variables))\n",
     "            \n",
@@ -1065,9 +1091,9 @@
     "            test_pert_z_vecs, test_GT_onehot_vecs = perturbate_embedding(test_z_images)\n",
     "            test_pert_imgs = generator.predict(test_z_images + test_pert_z_vecs)\n",
     "            test_pert_diff = tf.abs(test_pert_imgs - test_recon_images)\n",
-    "            test_onehot_dim_pred = recognizer.predict(test_pert_diff) ### abs or not\n",
+    "            test_onehot_dim_pred = disentangleNET.predict(test_pert_diff) ### abs or not\n",
     "            test_dim_pred = np.argmax(test_onehot_dim_pred, axis=1)\n",
-    "            test_recognizer_acc = len(test_dim_pred[test_dim_pred==np.argmax(test_GT_onehot_vecs, axis=1)]) / len(test_dim_pred)\n",
+    "            test_disentangleNET_acc = len(test_dim_pred[test_dim_pred==np.argmax(test_GT_onehot_vecs, axis=1)]) / len(test_dim_pred)\n",
     "            test_pert_CLF_perc_loss = perc_loss(CNN_clf_Model_outputs, test_images, test_pert_imgs).numpy()\n",
     "            test_pert_VGG_perc_loss = perc_loss(VGG_Model_outputs, test_images, test_pert_imgs).numpy()\n",
     "            test_pert__pert_imgs = generator.predict(encoder.predict(test_pert_imgs)[0] - test_pert_z_vecs )\n",
@@ -1076,7 +1102,7 @@
     "            test_CLF_loss = np.round(perc_loss(CNN_clf_Model_outputs, test_images, test_recon_images).numpy(),3)\n",
     "            test_VGG_loss = np.round(perc_loss(VGG_Model_outputs, test_images, test_recon_images).numpy(),3)\n",
     "            test_z_scores_loss = np.round(K.mean(K.abs(test_images_scores - test_z_scores)).numpy(),3)\n",
-    "            test_disent_acc = np.round(test_recognizer_acc,3)\n",
+    "            test_disent_acc = np.round(test_disentangleNET_acc,3)\n",
     "            test_cov, test_z_std_loss, test_diag_cov_mean , test_off_diag_loss, test_off_diag_mean_10 = cov_loss_terms(test_z_images)\n",
     "            test_pert_consistency_loss = perc_loss(CNN_clf_Model_outputs, test_pert_imgs, test_pert__pert_imgs)\n",
     "            test_pert_diff_loss = tf.reduce_mean(test_pert_diff)\n",
@@ -1140,12 +1166,15 @@
     "            \n",
     "            print(cor_vals[15:].max())\n",
     "            \n",
-    "    # if (epoch+1) % 1 == 0:\n",
-    "    #     save_path = '.' \n",
-    "    #     encoder.save(save_path + 'enc_epoch_')\n",
-    "    #     generator.save(save_path + 'gen_epoch_')\n",
-    "    #     recognizer.save(save_path + 'rec_epoch_')\n",
-    "    #     discriminator1D.save(save_path + 'disc1_epoch_')\n"
+    "    if (epoch+1) % 1 == 0:\n",
+    "        save_path = data_path + 'GENDER/GENDER_DISCOVER_SAVED_MODELS/' \n",
+    "        encoder.save(save_path + 'encoder.h5', include_optimizer=False)\n",
+    "        generator.save(save_path + 'generator.h5', include_optimizer=False)\n",
+    "        disentangleNET.save(save_path + 'disentangleNET.h5', include_optimizer=False)\n",
+    "        discriminator1D.save(save_path + 'discriminator1D.h5', include_optimizer=False)\n",
+    "        \n",
+    "        \n",
+    "        "
    ]
   },
   {
