--- a/GENDER/GENDER_ANALYSIS.ipynb
+++ b/GENDER/GENDER_ANALYSIS.ipynb
@@ -360,8 +360,8 @@
    "source": [
     "# check classifier predictions are similar to CLF training\n",
     "\n",
-    "saved_name = 'GENDER_CLF_SAVED_MODEL.h5' # new\n",
-    "clf_model_path = data_path + '/DISCOVERY-master/GENDER/' + saved_name\n",
+    "saved_name = 'classifier.h5' # new\n",
+    "clf_model_path = data_path + 'GENDER/GENDER_SAVED_MODELS/' + saved_name\n",
     "clf_model = load_model(clf_model_path , compile=True)\n",
     "\n",
     "images3D = images.repeat(3, -1)   \n",
@@ -479,10 +479,11 @@
     "latent_dim = 350\n",
     "\n",
     "\n",
-    "model_path = data_path + '/DISCOVERY-master/GENDER/GENDER_DISCOVER_SAVED_MODELS/'\n",
+    "model_path = data_path + 'GENDER/GENDER_SAVED_MODELS/'\n",
     "encoder = load_model(model_path + 'encoder' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
     "decoder = load_model(model_path + 'generator' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
     "recognizer = load_model(model_path + 'disentangleNET' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
+    "discriminator1D = load_model(model_path + 'discriminator1D' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
     "\n",
     "\n",
     "#################################\n",
