--- a/GENDER/GENDER_CLF_TRAINING.ipynb
+++ b/GENDER/GENDER_CLF_TRAINING.ipynb
@@ -505,7 +505,7 @@
     "        plot_hist(train_y, train_clf_pred)\n",
     "        plot_hist(y_test, test_clf_pred)\n",
     "    \n",
-    "    final_model.save(data_path + '/main_dir/model_name.h5, include_optimizer=True)  \n",
+    "    final_model.save(data_path + 'GENDER/GENDER_SAVED_MODELS/classifier.h5, include_optimizer=True)  \n",
     "                     \n"
    ]
   },
