--- a/GENDER/GENDER_DISCOVER_TRAINING.ipynb
+++ b/GENDER/GENDER_DISCOVER_TRAINING.ipynb
@@ -901,8 +901,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "CNN_saved_name = 'GENDER_CLF_SAVED_MODEL.h5' # new\n",
-    "CNN_clf_model_path = data_path + '/DISCOVERY-master/GENDER/' + CNN_saved_name\n",
+    "CNN_saved_name = 'classifier.h5' # new\n",
+    "CNN_clf_model_path = data_path + 'GENDER/GENDER_SAVED_MODELS/' + CNN_saved_name\n",
     "CNN_clf_model = load_model(CNN_clf_model_path , compile=True)\n",
     "CNN_clf_model.trainable = False # we dont train the CNN\n",
     "\n",
@@ -954,7 +954,7 @@
     "\n",
     "# load weights to model\n",
     "if upload_saved_model == 1:\n",
-    "    model_path = data_path + '/DISCOVERY-master/GENDER/GENDER_DISCOVER_SAVED_MODELS/'\n",
+    "    model_path = data_path + 'GENDER/GENDER_SAVED_MODELS/'\n",
     "    encoder.load_weights(model_path + 'encoder' + '.h5')\n",
     "    generator.load_weights(model_path + 'generator' + '.h5')\n",
     "    disentangleNET.load_weights(model_path + 'disentangleNET' + '.h5')\n",
@@ -1167,7 +1167,7 @@
     "            print(cor_vals[15:].max())\n",
     "            \n",
     "    if (epoch+1) % 1 == 0:\n",
-    "        save_path = data_path + 'GENDER/GENDER_DISCOVER_SAVED_MODELS/' \n",
+    "        save_path = data_path + 'GENDER/GENDER_SAVED_MODELS/' \n",
     "        encoder.save(save_path + 'encoder.h5', include_optimizer=False)\n",
     "        generator.save(save_path + 'generator.h5', include_optimizer=False)\n",
     "        disentangleNET.save(save_path + 'disentangleNET.h5', include_optimizer=False)\n",
