--- a/GENDER/GENDER_ANALYSIS.ipynb
+++ b/GENDER/GENDER_ANALYSIS.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Dependencies\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
@@ -76,6 +78,9 @@
     }
    ],
    "source": [
+    "# verify versions\n",
+    "\n",
+    "\n",
     "from platform import python_version\n",
     "print(python_version())\n",
     "print(tf.__version__)\n",
@@ -109,6 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Spectral 1D/2D layers - used in training DISCOVER. Needed to load the saved networks\n",
+    "\n",
     "class DenseSN(Dense):\n",
     "    def build(self, input_shape):\n",
     "        assert len(input_shape) >= 2\n",
@@ -249,6 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data loaded values\n",
+    "\n",
     "img_rows, img_cols = 64, 64\n",
     "img_size = 64 \n",
     "nmax = 5000\n",
@@ -297,8 +306,9 @@
     }
    ],
    "source": [
-    "# load data\n",
-    "margin = 15\n",
+    "## load data\n",
+    "\n",
+    "margin = 15 # cropping edges of faces images (for CelebA)\n",
     "\n",
     "def load_images(directory):\n",
     "    imagePaths = list(paths.list_images(directory))\n",
@@ -322,8 +332,8 @@
     "\n",
     "################################################################################################\n",
     "# test\n",
-    "images0 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TEST_0') # ('/home/odedrot/images/Unet_images_64pix_clf_aa_test')\n",
-    "images1 = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TEST_1') # ('/home/odedrot/images/Unet_images_64pix_clf_bc_test')\n",
+    "images0 = load_images(data_path + '/DISCOVERY/GENDER/IMAGES/TEST_0') # ('/home/odedrot/images/Unet_images_64pix_clf_aa_test')\n",
+    "images1 = load_images(data_path + '/DISCOVERY/GENDER/IMAGES/TEST_1') # ('/home/odedrot/images/Unet_images_64pix_clf_bc_test')\n",
     "images = np.concatenate((images0, images1))\n",
     "images = images/ 255\n",
     "print(images.shape)\n",
@@ -361,7 +371,7 @@
     "# check classifier predictions are similar to CLF training\n",
     "\n",
     "saved_name = 'classifier.h5' # new\n",
-    "clf_model_path = data_path + 'GENDER/GENDER_SAVED_MODELS/' + saved_name\n",
+    "clf_model_path = data_path + 'DISCOVERY/GENDER/GENDER_SAVED_MODELS/' + saved_name\n",
     "clf_model = load_model(clf_model_path , compile=True)\n",
     "\n",
     "images3D = images.repeat(3, -1)   \n",
@@ -475,32 +485,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load models\n",
-    "latent_dim = 350\n",
+    "##  load models\n",
+    "\n",
+    "latent_dim = 350 # define latent dimentions\n",
     "\n",
     "\n",
-    "model_path = data_path + 'GENDER/GENDER_SAVED_MODELS/'\n",
+    "model_path = data_path + 'DISCOVERY/GENDER/GENDER_SAVED_MODELS/'\n",
     "encoder = load_model(model_path + 'encoder' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
     "decoder = load_model(model_path + 'generator' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
     "recognizer = load_model(model_path + 'disentangleNET' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
     "discriminator1D = load_model(model_path + 'discriminator1D' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
-    "\n",
-    "\n",
-    "#################################\n",
-    "# try:\n",
-    "#     ae_model = load_model(ae_model_path , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN , 'Wvar_reg': Wvar_reg})\n",
-    "# except:\n",
-    "#     ae_model = load_model(ae_model_path , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'kernel_init': kernel_init})\n",
-    "\n",
-    "# # ae_model = load_model(ae_model_path , compile=False)\n",
-    "    \n",
-    "# encoder = ae_model.get_layer('encoder')\n",
-    "# decoder = ae_model.get_layer('decoder')\n",
-    "# try:\n",
-    "#     discriminator1D = ae_model.get_layer('discriminator')\n",
-    "#     recognizer = ae_model.get_layer('recognizer')\n",
-    "# except:\n",
-    "#     f=1\n",
     "\n"
    ]
   },
@@ -519,6 +513,7 @@
    ],
    "source": [
     "# encode/decode images\n",
+    "\n",
     "try:\n",
     "    z_dist, Escore = encoder.predict(images)\n",
     "except:\n",
