--- a/GENDER/GENDER_CLF_TRAINING.ipynb
+++ b/GENDER/GENDER_CLF_TRAINING.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## dependencies\n",
+    "\n",
     "import keras\n",
     "import tensorflow as tf\n",
     "from matplotlib import pyplot as plt\n",
@@ -54,14 +56,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Initializations\n",
+    "\n",
     "img_size, num_channels = 64,1\n",
-    "equalize_classes = 0\n",
-    "aug_data_flag = 1\n",
-    "clf_model = 'vgg'    # inception, resnet, vgg, densenet, encoder, simple_cnn,  ccf_model , load_custom_model\n",
-    "last_layers_are_needed = 1\n",
+    "equalize_classes = 0 # flag for oversampling minority class if needed\n",
+    "aug_data_flag = 1    # flag for using augmentations\n",
+    "clf_model = 'vgg'    # which backbone to use for the classifier inception, resnet, vgg, densenet, encoder, simple_cnn,  ccf_model , load_custom_model\n",
+    "last_layers_are_needed = 1 # adding MLP after convolutional layers to customize the classifier for binary output\n",
     "retrain_model = 1 # 0-imagenet weights , 1- initialize from imagenet, None for random weights not \"imagenet \n",
     "seed_val = 3 \n",
-    "margin=15\n",
+    "margin=15 # crop the edges of the images\n",
     "data_path = '/home/odedrot' # user input"
    ]
   },
@@ -71,6 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## functions used for displaying outpus\n",
+    "\n",
     "def plot_imgs_withLabels_3D(imgs, labels, n_examples, fig_size):\n",
     "    n = int(np.sqrt(n_examples))\n",
     "    k=0\n",
@@ -130,6 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## load images \n",
+    "\n",
     "def load_images(directory):\n",
     "    imagePaths = list(paths.list_images(directory))\n",
     "    data = []\n",
@@ -160,6 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## load train/test datasets\n",
+    "\n",
     "print('female train')\n",
     "images_1, names_1, labels_1                = load_images(data_path + '/DISCOVERY-master/GENDER/IMAGES/TRAIN_1') \n",
     "print('male train')\n",
@@ -180,6 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## verify no leakage \n",
     "print( set(names_1) == set(names_1_test) )\n",
     "print( set(names_0) == set(names_0_test) )"
    ]
@@ -190,7 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## train \n",
+    "## Equalize data from both classes for training and merge both classes to one training dataset\n",
+    "\n",
     "train_images_0 = images_0 \n",
     "train_images_1 = images_1\n",
     "\n",
@@ -352,10 +364,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if clf_model == 'load_custom_model': \n",
-    "    CNN_saved_name = 'saved_model_name.h5' # new\n",
-    "    CNN_clf_model_path = '/saved_dir/' + CNN_saved_name\n",
-    "    model = load_model(CNN_clf_model_path , compile=True)\n",
+    "## Construct the model.\n",
+    "## define the backbone and training from scracth or from pretrained weights\n",
+    "\n",
+    "# if clf_model == 'load_custom_model': \n",
+    "#     CNN_saved_name = 'saved_model_name.h5' # new\n",
+    "#     CNN_clf_model_path = '/saved_dir/' + CNN_saved_name\n",
+    "#     model = load_model(CNN_clf_model_path , compile=True)\n",
     "if clf_model == 'resnet': \n",
     "    model = ResNet50(weights=\"imagenet\", include_top=False, input_shape=(img_size, img_size,3)) # Xception ResNet50\n",
     "if clf_model == 'vgg': # \"imagenet\" or None\n",
@@ -403,10 +418,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## hyperparameters and optimizer\n",
+    "\n",
     "batch_size = 64\n",
     "epochs = 300\n",
     "LEARNING_RATE = 0.00000001\n",
-    "optimizer=Adam(LEARNING_RATE)\n",
+    "optimizer=Adam(LEARNING_RATE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## lossess and metrics\n",
+    "\n",
     "bce = tf.keras.losses.BinaryCrossentropy(from_logits=False, label_smoothing=0.3)\n",
     "\n",
     "def bce_loss(y_real, y_pred):\n",
@@ -450,6 +477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Training model and save\n",
+    "\n",
     "test_imgs = X_test.astype(\"float32\") / 255\n",
     "test_imgs = np.expand_dims(test_imgs,-1)\n",
     "test_imgs = test_imgs.repeat(3, -1)\n",
@@ -505,7 +534,7 @@
     "        plot_hist(train_y, train_clf_pred)\n",
     "        plot_hist(y_test, test_clf_pred)\n",
     "    \n",
-    "    final_model.save(data_path + 'GENDER/GENDER_SAVED_MODELS/classifier.h5, include_optimizer=True)  \n",
+    "    final_model.save(data_path + 'DISCOVERY/GENDER/GENDER_SAVED_MODELS/classifier.h5, include_optimizer=True)  \n",
     "                     \n"
    ]
   },
