--- a/GENDER/GENDER_DISCOVER_TRAINING.ipynb
+++ b/GENDER/GENDER_DISCOVER_TRAINING.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Dependencies\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Rectangle\n",
@@ -58,6 +60,8 @@
     }
    ],
    "source": [
+    "# verify versions\n",
+    "\n",
     "from platform import python_version\n",
     "print(python_version())\n",
     "\n",
@@ -103,6 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## verify GPU\n",
+    "\n",
     "import GPUtil\n",
     "from tabulate import tabulate\n",
     "\n",
@@ -132,8 +138,7 @@
     "        gpu_total_memory, gpu_temperature\n",
     "    ))\n",
     "\n",
-    "print(tabulate(list_gpus, headers=(\"id\", \"name\", \"load\", \"free mem\", \"used mem\", \"total mem\",\n",
-    "                                   \"temperature\")))"
+    "print(tabulate(list_gpus, headers=(\"id\", \"name\", \"load\", \"free mem\", \"used mem\", \"total mem\",  \"temperature\")))"
    ]
   },
   {
@@ -142,7 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load data\n",
+    "## load data\n",
+    "\n",
     "margin = 15\n",
     "def load_images(directory):\n",
     "    imagePaths = list(paths.list_images(directory))\n",
@@ -190,6 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Augmentations\n",
+    "\n",
     "@tf.function\n",
     "def brightness(x):\n",
     "    x = tf.image.random_brightness(x, 0.15)\n",
@@ -304,6 +312,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Spectral 1D/2D layers\n",
+    "\n",
     "class DenseSN(Dense):\n",
     "    def build(self, input_shape):\n",
     "        assert len(input_shape) >= 2\n",
@@ -561,6 +571,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Encoder \n",
+    "\n",
     "GaussianNoise_std = 0.003\n",
     "\n",
     "def res_block_down(layer_input, filters):\n",
@@ -643,6 +655,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Decoder \n",
+    "\n",
     "def res_block_up(layer_input, filters):\n",
     "    d = BatchNormalization()(layer_input)\n",
     "    d = Activation('relu')(d)\n",
@@ -682,6 +696,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Discriminator for AAE\n",
+    "\n",
     "def BuildDiscriminator1D():\n",
     "    model = Sequential()\n",
     "    model.add(Dense(2048, input_dim=latent_dim))\n",
@@ -704,6 +720,16 @@
     "    encoded_repr = Input(shape=(latent_dim, ))\n",
     "    validity = model(encoded_repr)\n",
     "    return Model(encoded_repr, validity, name='discriminator')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Disentangler network for disentanglement\n",
     "\n",
     "def build_disentangleNET():\n",
     "    disentangleNET_input = Input(shape=img_shape, name='disentangleNET_input') # batchx128x128x1    \n",
@@ -731,6 +757,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## functions used for losses and for disentanglement\n",
+    "\n",
     "def gray2rgb(tensor):\n",
     "    tensor = tf.image.grayscale_to_rgb(tensor)\n",
     "    return tensor\n",
@@ -866,32 +894,7 @@
     "    return kid\n",
     "\n",
     "bce = tf.keras.losses.BinaryCrossentropy(from_logits=False, label_smoothing=0.001)\n",
-    "cce = tf.keras.losses.CategoricalCrossentropy(from_logits=False)\n",
-    "\n",
-    "\n",
-    "def multi_layer_second_directional_derivative(G, z, x, epsilon):\n",
-    "    G_z = [G(z)]\n",
-    "    G_to_x = [G(z + x)]\n",
-    "    G_from_x = [G(z - x)]\n",
-    "    sdd = [(G2x - 2 * G_z_base + Gfx) / epsilon**2 for G2x, G_z_base, Gfx in zip(G_to_x, G_z, G_from_x)] # len=1 , sdd[0] 64,64,64,1\n",
-    "    return sdd\n",
-    "def hessian_penalty(G, z, k):\n",
-    "    epsilon=0.1\n",
-    "    second_orders = []\n",
-    "    for _ in range(k): \n",
-    "        rademacher_tensors = tfp.random.rademacher(tf.shape(z)) # (bs, zdim)\n",
-    "        x = epsilon * rademacher_tensors # (bs, zdim)\n",
-    "        central_second_order = multi_layer_second_directional_derivative(G, z, x, epsilon)   ########## # len=1 , sdd[0] 64,64,64,1\n",
-    "        second_orders.append(central_second_order) # (k,1,  64,64,64,1)\n",
-    "    \n",
-    "    sum_of_penalties = 0 \n",
-    "    for activ_n in zip(*second_orders): \n",
-    "        second_orders__ = tf.stack(activ_n) # (100, 64, 64, 64, 1)\n",
-    "        _, var_tensor = tf.nn.moments(second_orders__, axes=(0,)) # var_tensor (64, 64, 64, 1)\n",
-    "        penalty = tf.reduce_max(var_tensor)  # (1,) (scalar) \n",
-    "        sum_of_penalties += penalty \n",
-    "    return sum_of_penalties\n",
-    "\n"
+    "cce = tf.keras.losses.CategoricalCrossentropy(from_logits=False)\n"
    ]
   },
   {
@@ -900,9 +903,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## defining the inner layers used for perceptual loss using the classifier and pretrained VGG19\n",
+    "\n",
     "\n",
     "CNN_saved_name = 'classifier.h5' # new\n",
-    "CNN_clf_model_path = data_path + 'GENDER/GENDER_SAVED_MODELS/' + CNN_saved_name\n",
+    "CNN_clf_model_path = data_path + 'DISCOVERY/GENDER/GENDER_SAVED_MODELS/' + CNN_saved_name\n",
     "CNN_clf_model = load_model(CNN_clf_model_path , compile=True)\n",
     "CNN_clf_model.trainable = False # we dont train the CNN\n",
     "\n",
@@ -946,15 +951,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Initializing networks\n",
+    "\n",
     "encoder = BuildEncoder()\n",
     "generator = BuildGenerator()\n",
     "disentangleNET = build_disentangleNET()\n",
     "discriminator1D = BuildDiscriminator1D()\n",
     "# discriminatorDW = BuildDiscriminatorDW()\n",
     "\n",
-    "# load weights to model\n",
+    "# load saved weights to model\n",
     "if upload_saved_model == 1:\n",
-    "    model_path = data_path + 'GENDER/GENDER_SAVED_MODELS/'\n",
+    "    model_path = data_path + 'DISCOVERY/GENDER/GENDER_SAVED_MODELS/'\n",
     "    encoder.load_weights(model_path + 'encoder' + '.h5')\n",
     "    generator.load_weights(model_path + 'generator' + '.h5')\n",
     "    disentangleNET.load_weights(model_path + 'disentangleNET' + '.h5')\n",
@@ -972,6 +979,8 @@
    },
    "outputs": [],
    "source": [
+    "## Training procedure and saving\n",
+    "\n",
     "test_batch_size = 200\n",
     "test_images = X_test[np.random.randint(0, X_test.shape[0], test_batch_size)] / 255 \n",
     "test_images_scores = CNN_clf_model( test_images.repeat(3, -1) )\n",
@@ -1167,7 +1176,7 @@
     "            print(cor_vals[15:].max())\n",
     "            \n",
     "    if (epoch+1) % 1 == 0:\n",
-    "        save_path = data_path + 'GENDER/GENDER_SAVED_MODELS/' \n",
+    "        save_path = data_path + 'DISCOVERY/GENDER/GENDER_SAVED_MODELS/' \n",
     "        encoder.save(save_path + 'encoder.h5', include_optimizer=False)\n",
     "        generator.save(save_path + 'generator.h5', include_optimizer=False)\n",
     "        disentangleNET.save(save_path + 'disentangleNET.h5', include_optimizer=False)\n",
