--- a/IVF/IVF_ANALYSIS.ipynb
+++ b/IVF/IVF_ANALYSIS.ipynb
@@ -326,7 +326,7 @@
     "\n",
     "################################################################################################\n",
     "# test\n",
-    "images = load_images(data_path + '/DISCOVERY-master/IVF/IMAGES/') # ('/home/odedrot/images/Unet_images_64pix_clf_aa_test')\n",
+    "images = load_images(data_path + '/DISCOVER/IVF/IMAGES/') \n",
     "images = images/ 255\n",
     "print(images.shape)\n",
     "\n",
@@ -342,8 +342,8 @@
    "source": [
     "# check classifier predictions are similar to CLF training\n",
     "\n",
-    "saved_name = 'IVF_CLF_SAVED_MODEL.h5' # new\n",
-    "clf_model_path = data_path + '/DISCOVERY-master/IVF/' + saved_name\n",
+    "saved_name = 'classifier.h5' # new\n",
+    "clf_model_path = data_path + '/DISCOVER/IVF/IVF_SAVED_MODELS/' + saved_name\n",
     "clf_model = load_model(clf_model_path , compile=True)\n",
     "\n",
     "images3D = images.repeat(3, -1)   \n",
@@ -360,7 +360,7 @@
     "# load models\n",
     "latent_dim = 350\n",
     "semantic_dim = 14\n",
-    "model_path = data_path + '/DISCOVERY-master/IVF/IVF_DISCOVER_SAVED_MODELS/'\n",
+    "model_path = data_path + '/DISCOVERY/IVF/IVF_SAVED_MODELS/'\n",
     "encoder = load_model(model_path + 'encoder' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
     "decoder = load_model(model_path + 'generator' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n",
     "recognizer = load_model(model_path + 'disentangleNET' + '.h5' , compile=False, custom_objects={'ConvSN2D': ConvSN2D , 'DenseSN': DenseSN, 'Wvar_reg': Wvar_reg})\n"
